# device_soc_amlogic

./: .gitignore  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md
a311d/: NOTICE  README_zh.md  soc.gni
a311d/hardware/: BUILD.gn
a311d/hardware/display/: BUILD.gn
a311d/hardware/display/include/: display_common.h  display_gfx_private.h  display_gralloc_private.h
a311d/hardware/display/src/display_device/: drm_connector.cpp  drm_connector.h  drm_crtc.cpp  drm_device.cpp  drm_display.cpp  drm_encoder.h  drm_plane.cpp  drm_plane.h  drm_vsync_worker.cpp  drm_vsync_worker.h  fb_composition.cpp  fb_composition.h  fb_device.cpp  fb_display.cpp  fb_display.h  hdi_device_common.h  hdi_device_interface.cpp  hdi_display.cpp  hdi_display.h  hdi_drm_composition.cpp  hdi_drm_composition.h  hdi_drm_layer.cpp  hdi_drm_layer.h  hdi_fd.h  hdi_gfx_composition.cpp  hdi_layer.cpp  hdi_layer.h  hdi_session.cpp  hdi_session.h  hdi_video_composition.cpp  hdi_video_composition.h  sorft_vsync.h
a311d/hardware/display/src/display_gfx/: display_gfx.c
a311d/hardware/display/src/display_gralloc/: display_gralloc.c  display_gralloc_gbm.c  display_gralloc_gbm.cpp  hi_gbm.c  hi_gbm.cpp  hi_gbm.h  hi_gbm_internal.h
a311d/hardware/display/src/display_layer/: display_layer.c
a311d/hardware/ge2d/: BUILD.gn
a311d/hardware/ge2d/include/: ge2d_com.h
a311d/hardware/ge2d/lib/: LICENSE
a311d/hardware/gpu/: BUILD.gn
a311d/hardware/gpu/lib/: libEGL.so.1  libGLESv1_CM.so.1  libGLESv2.so.2  libgbm.so.1  libglapi.so.0
a311d/hardware/gpu/lib64/: libEGL.so.1  libGLESv1_CM.so.1  libGLESv2.so.2  libgbm.so.1  libglapi.so.0
a311d/hardware/gpu/modules/: gpu-sched.ko  panfrost.ko
a311d/hardware/isp/: BUILD.gn
a311d/hardware/isp/bin64/: iv009_isp
a311d/hardware/isp/lib/: libc.so.6  libdl.so.2  libisp_c.so.6  libisp_pthread.so.0  libpthread.so.0
a311d/hardware/isp/lib64/: ld-linux-aarch64.so.1  libc.so.6  libdl.so.2  libgcc_s.so.1  libm.so.6  libpthread.so.0  librt.so.6  libstdc++.so.6.0
a311d/hardware/isp/modules/: iv009_isp.ko  iv009_isp_iq.ko  iv009_isp_lens.ko  iv009_isp_sensor.ko
a311d/hardware/media/: BUILD.gn
a311d/hardware/media/firmware/: BUILD.gn
a311d/hardware/media/include/: vpcodec_1_0.h
a311d/hardware/media/libamcodec/: BUILD.gn
a311d/hardware/media/libamcodec/include/yuvplayer/: amvideo.h  ion.h  ion_dev.h  v4l2-controls.h  videodev2.h
a311d/hardware/media/libamplayer/: BUILD.gn
a311d/hardware/media/libamplayer/audio_render/: BUILD.gn  amplayer_audio_render_adapter.cpp  amplayer_audio_render_adapter.h
a311d/hardware/media/libamplayer/include/: audio_external_render.h  log_print.h  message.h  player.h  player_ctrl.h  player_dump.h  player_error.h  player_id.h  player_set_sys.h  player_thumbnail.h  player_type.h  stream_format.h
a311d/hardware/media/libamplayer/lib/: LICENSE
a311d/hardware/media/libamplayer/samples/: kplayer.c
a311d/hardware/media/libamvdec/: BUILD.gn
a311d/hardware/media/libamvdec/include/: IONmem.h  amvdec_priv.h  amvideo.h
a311d/hardware/media/libamvdec/include/ion/: ion.h
a311d/hardware/media/libamvdec/samples/: ionplayer.c
a311d/hardware/media/libvpcodec/: BUILD.gn
a311d/hardware/media/modules/: BUILD.gn  amionvideo.ko  amrdma.ko  amvdec_av1.ko  amvdec_avs.ko  amvdec_avs2.ko  amvdec_h264.ko  amvdec_h264mvc.ko  amvdec_h265.ko  amvdec_mavs.ko  amvdec_mh264.ko  amvdec_mjpeg.ko  amvdec_mmjpeg.ko  amvdec_mmpeg12.ko  amvdec_mmpeg4.ko  amvdec_mpeg12.ko  amvdec_mpeg4.ko  amvdec_real.ko  amvdec_vc1.ko  amvdec_vp9.ko  amvfm.ko  amvideo.ko  amvout_legacy.ko  amvpu.ko  decoder_common.ko  di.ko  dil.ko  encoder.ko  firmware.ko  jpegenc.ko  media_clock.ko  meson-vdec.ko  ppmgr.ko  registers.ko  stream_input.ko  v4l2-mem2mem.ko  videobuf2-dma-contig.ko
a311d/soc/: Kconfig  Makefile
a311d/soc/amlogic/: Kconfig  Makefile  make-boot.sh
a311d/soc/amlogic/canvas/: Makefile  canvas.c  canvas_mgr.c
a311d/soc/amlogic/codecs/: Kconfig  Makefile  es7243.c  es7243.h
a311d/soc/amlogic/cpu_version/: meson32_cpu.c  meson64_cpu.c
a311d/soc/amlogic/ge2d/: Makefile  bitblt.c  blend.c  fillrect.c  ge2d_dmabuf.c  ge2d_dmabuf.h  ge2d_hw.c  ge2d_io.h  ge2d_log.h  ge2d_main.c  ge2d_reg.h  ge2d_wq.c  ge2d_wq.h  ge2dgen.c  ge2dgen.h  stretchblt.c
a311d/soc/amlogic/input/: Kconfig  Makefile
a311d/soc/amlogic/input/keyboard/: Makefile  gpio_keypad.c
a311d/soc/amlogic/iomap/: iomap.c
a311d/soc/amlogic/media/: Kconfig  Makefile
a311d/soc/amlogic/mmc/: emmc_key.c  emmc_key.h  emmc_partitions.c
a311d/soc/amlogic/phy/: Kconfig  Makefile  phy-meson-axg-mipi-dphy.c  phy-meson-g12a-mipi-dphy-analog.c
a311d/soc/amlogic/pm/: Kconfig  Makefile  meson_gx_pm.c
a311d/soc/amlogic/reboot/: Kconfig  reboot.c
a311d/soc/amlogic/secmon/: secmon.c
a311d/soc/amlogic/uart/: Kconfig  meson_uart.c
a311d/soc/amlogic/unifykey/: amlkey_if.h  efuse.c  efuse.h  efuse_api.c  efuse_burn.c  efuse_burn.h  efuse_unifykey.c  normal_key.c  normal_key.h  security_key.c  security_key.h  storage_key.c  unifykey.c  unifykey.h  unifykey_dts.c
a311d/soc/arch/arm64/: Makefile
a311d/soc/include/dt-bindings/: g12a-clkc.h
hardware/: BUILD.gn
hardware/display/: BUILD.gn
hardware/display/src/display_device/: drm_connector.cpp  drm_crtc.cpp  drm_crtc.h  drm_device.h  drm_plane.h  hdi_layer.cpp  hdi_layer.h  hdi_session.h  sorft_vsync.cpp
hardware/display/src/display_gfx/: display_gfx.c
hardware/display/src/display_gralloc/: display_gralloc_gbm.c  hi_gbm_internal.h
hardware/ge2d/include/: aml_ge2d.h  ge2d_dmabuf.h  ge2d_port.h
hardware/gpu/: BUILD.gn
hardware/gpu/lib/: libEGL.so.1  libGLESv2.so.2  libgbm.so.1  libglapi.so.0
hardware/gpu/modules/: gpu-sched.ko  panfrost.ko
hardware/isp/: BUILD.gn  LICENSE
hardware/isp/modules/: iv009_isp.ko  iv009_isp_iq.ko  iv009_isp_lens.ko  iv009_isp_sensor.ko
hardware/media/: BUILD.gn
hardware/media/modules/: BUILD.gn  decoder_common.ko  encoder.ko  firmware.ko  jpegenc.ko  media_clock.ko  meson-vdec.ko  registers.ko  v4l2-mem2mem.ko  videobuf2-dma-contig.ko
hardware/vpcodec/: BUILD.gn
(+50 files in other folders)
