# Copyright (c) 2022 Unionman Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# Media
ohos_prebuilt_etc("videobuf2-dma-contig.ko") {
  source = "videobuf2-dma-contig.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

ohos_prebuilt_etc("v4l2-mem2mem.ko") {
  source = "v4l2-mem2mem.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

ohos_prebuilt_etc("meson-vdec.ko") {
  source = "meson-vdec.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

ohos_prebuilt_etc("registers.ko") {
  source = "registers.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

ohos_prebuilt_etc("media_clock.ko") {
  source = "media_clock.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

ohos_prebuilt_etc("firmware.ko") {
  source = "firmware.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

ohos_prebuilt_etc("decoder_common.ko") {
  source = "decoder_common.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

ohos_prebuilt_etc("encoder.ko") {
  source = "encoder.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

ohos_prebuilt_etc("jpegenc.ko") {
  source = "jpegenc.ko"
  module_install_dir = "modules"
  install_images = [ "vendor" ]

  part_name = "amlogic_products"
}

group("media_modules") {
  deps = [
    ":videobuf2-dma-contig.ko",
    ":v4l2-mem2mem.ko",
    ":meson-vdec.ko",
    ":registers.ko",
    ":media_clock.ko",
    ":firmware.ko",
    ":decoder_common.ko",
    ":encoder.ko",
    ":jpegenc.ko",
  ]
}