# Copyright (c) 2022 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("h264_enc_bin") {
  source = "video/h264_enc.bin"
  module_install_dir = "lib/firmware/video"
  install_images = [ "system" ]

  part_name = "unionman_products"
}

ohos_prebuilt_etc("video_ucode_bin") {
  source = "video/video_ucode.bin"
  module_install_dir = "lib/firmware/video"
  install_images = [ "system" ]

  part_name = "unionman_products"
}

group("media_firmware") {
  deps = [
    ":h264_enc_bin",
    ":video_ucode_bin",
  ]
}
