# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_shared_library("libamcodec") {
  source = "lib/libamcodec.so"
  install_images = [ chipset_base_dir ]
  part_name = "device_unionpi_tiger"

  deps = [
    ":libammad",
    ":libfaad-aml",
  ]
}

ohos_prebuilt_shared_library("libammad") {
  source = "lib/libammad.so"
  install_images = [ chipset_base_dir ]
  part_name = "device_unionpi_tiger"
}

ohos_prebuilt_shared_library("libfaad-aml") {
  source = "lib/libfaad-aml.so"
  install_images = [ chipset_base_dir ]
  part_name = "device_unionpi_tiger"
}
