# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_shared_library("libamvdec") {
  source = "lib/libamvdec.so"
  install_images = [ chipset_base_dir ]
  subsystem_name = "unionman_products"
  part_name = "unionman_products"
}

ohos_executable("ionplayer") {
  install_enable = true
  sources = [ "samples/ionplayer.c" ]
  install_images = [ chipset_base_dir ]

  cflags = [
    "-fno-rtti",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wno-error",
    "-Wextra",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  deps = [
    ":libamvdec",
    "../libamcodec:libamcodec",
  ]

  include_dirs = [
    "include",
    "../libamcodec/include",
  ]

  subsystem_name = "unionman_products"
  part_name = "unionman_products"
}
