# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libamplayer_audio_render") {
  install_enable = true

  install_images = [ "vendor" ]

  sources = [ "amplayer_audio_render_adapter.cpp" ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/audio/hal/hdi_binder/proxy/include/",
    "//drivers/peripheral/base",
    "//foundation/multimedia/audio_framework/frameworks/native/hdiadapter/sink/primary",
    "//foundation/multimedia/audio_framework/frameworks/native/hdiadapter/sink/common",
    "../include",
  ]

  configs = [
    "//foundation/graphic/graphic_2d/frameworks/surface:surface_public_config",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils_public_config",
  ]
  deps = [ "//foundation/multimedia/audio_framework/frameworks/native/hdiadapter/sink:audio_renderer_sink" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  cflags = [
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  subsystem_name = "unionman_products"
  part_name = "unionman_products"
}
